--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="randomizeRelics.js"></script>
+    <script src="index.js"></script>
     <script>
     const doStuff = () => {
       const relics = [
