--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
   </head>
   <body style="text-align: center">
     <h1>Current Symphony of the Night Randomizer Relic Distribution</h1>
+    <div>Change then number of runs by adding ?runs=# to the end of the url</div>
     <div id='content'>
     </div>
   </body>
