Add version number to index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="dev-border"></div>
+    <div id="version"></div>
     <h1>Castlevania: Symphony of the Night Randomizer</h1>
     <p>
       by Wild Mouse
