Make specifying bin file optional on cli for some actions

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <label for="show-spoilers">Show spoilers</label>
       </div>
       <div>
-        <input id="show-relics" type="checkbox" disabled="disabled">
+        <input id="show-relics" type="checkbox">
         <label for="show-relics">Show relic locations</label>
       </div>
       <p>
