Save form options

--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@
         <input id="seed" type="text">
       </p>
       <div>
-        <input id="relic-locations" type="checkbox" checked="checked">
+        <input id="relic-locations" type="checkbox">
         <label for="relic-locations">Randomize relic locations</label>
       </div>
       <div>
-        <input id="item-locations" type="checkbox" checked="checked">
+        <input id="item-locations" type="checkbox">
         <label for="item-locations">Randomize item locations</label>
       </div>
       <div>
-        <input id="enemy-drops" type="checkbox" checked="checked">
+        <input id="enemy-drops" type="checkbox">
         <label for="enemy-drops">Randomize enemy drops</label>
       </div>
       <div>
-        <input id="starting-equipment" type="checkbox" checked="checked">
+        <input id="starting-equipment" type="checkbox">
         <label for="starting-equipment">Randomize starting equipment</label>
       </div>
       <div>
-        <input id="prologue-rewards" type="checkbox" checked="checked">
+        <input id="prologue-rewards" type="checkbox">
         <label for="prologue-rewards">Randomize prologue rewards</label>
       </div>
       <div>
-        <input id="turkey-mode" type="checkbox" checked="checked">
+        <input id="turkey-mode" type="checkbox">
         <label for="turkey-mode">Turkey mode</label>
       </div>
       <div>
-        <input id="append-seed" type="checkbox" checked="checked">
+        <input id="append-seed" type="checkbox">
         <label for="append-seed">Append seed to filename</label>
       </div>
       <div>
-        <input id="show-spoilers" type="checkbox" checked="checked">
+        <input id="show-spoilers" type="checkbox">
         <label for="show-spoilers">Show spoilers</label>
       </div>
       <div>
