Edit help section in light of append seed option

--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
       only the first .bin file (track 1) into the drop zone.
     </p>
     <p>
-      After downloading the randomized image, you will need to rename it to
-      match the track listing in your .cue file, or, modify your cue file to
-      use the name of the randomized image.
+      If the seed name is appended to your randomized image filename after
+      downloading, you will need to rename it to match the track listing in
+      your .cue file, or, modify your cue file to use the name of the
+      randomized image.
     </p>
     <hr>
     <h2><a name="links">Links</a></h2>
