--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
     </p>
     <p>
       If the seed name is appended to your randomized image filename after
-      downloading, you will need to rename it to match the track listing in
-      your .cue file, or, modify your cue file to use the name of the
-      randomized image.
+      downloading, you will need to modify your cue file track listing to
+      reference the new filename.
     </p>
     <hr>
     <h2><a name="links">Links</a></h2>
