--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <textarea id="spoilers" rows="8" cols="32" disabled="disabled">
         </textarea>
       </div>
-      <p>
+      <p class="pure-u-1">
         <input id="randomize"
                type="submit"
                class="pure-button pure-button-primary"
@@ -87,13 +87,10 @@
                disabled="disabled"
                value="Copy seed">
       </p>
-      <p>
-        <input id="seed-url" type="text" class="hidden">
-        <div id="notification">Copied to clipboard</div>
-      </p>
       <a id="download" style="display:none"></a>
       <div id="loader"></div>
     </form>
+    <div id="notification">Copied to clipboard</div>
     <hr>
     <h2><a name="help">Help</a></h2>
     <p>
