Build item randomization pool based of which item randomizations have been selected

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
     </p>
     <hr>
     <h2><a name="changelog">Changelog</a></h2>
+    <h3><time>Map 8, 2019</time></h3>
+    <ul>
+      <li>Add support for <a href="https://github.com/3snowp7im/SotN-Randomizer#custom-relic-logic">custom relic logic</a>.</li>
+    </ul>
     <h3><time>Map 3, 2019</time></h3>
     <ul>
       <li>Add file input as alternative to drag API.</li>
