Rename plandomizer to PresetBuilder and add all customization options. Add preset selector to web interface.

--- a/relics/index.html
+++ b/relics/index.html
@@ -4,7 +4,7 @@
     <script src="../constants.js"></script>
     <script src="../relics.js"></script>
     <script src="../util.js"></script>
-    <script src="../logic/safe.js"></script>
+    <script src="../presets/safe.js"></script>
     <script src="../randomize_relics.js"></script>
     <script>
     const doStuff = function() {
