--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
     </p>
     <hr>
     <h2><a name="changelog">Changelog</a></h2>
-    <h3><time>May 22, 2019</time></h3>
+    <h3><time>May 23, 2019</time></h3>
     <ul>
       <li>Add support for custom enemy drops, starting equipment, item
         locations, and prologue rewards.</li>
-      <li>Deprecate relic logic in favor presets.</li>
+      <li>Deprecate relic logic selector in favor presets.</li>
     </ul>
     <h3><time>May 11, 2019</time></h3>
     <ul>
