--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <p>
         This randomizer targets the original NTSC-U release of
         <a href="http://redump.org/disc/3379/"><i>Castlevania: Symphony of the
-            Night</i> (SLU-00067)</a>. You will need an image of your game
+            Night</i> (SLUS-00067)</a>. You will need an image of your game
         disc in BIN/CUE format. If your disc image is split across two .bin
         files, drag only the first .bin file (track 1) into the drop zone.
       </p>
