Add system requirements

--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
       <div id="notification">Copied to clipboard</div>
       <hr>
       <h2><a name="help">Help</a></h2>
+      <h4><a name="system-requirements">System requirements</a></h4>
+      <p>
+        Browser: Chrome, Firefox, and Opera<br>
+        OS: Windows, Mac, or Linux family<br>
+        RAM: 2GB<br>
+        <em>Due to the RAM requirements, the randomizer is unlikely to run
+          on mobile browsers.</em>
+      </p>
+      <h4><a name="usage">Usage</a></h4>
       <p>
         This randomizer targets the original NTSC-U release of
         <a href="http://redump.org/disc/3379/"><i>Castlevania: Symphony of the
@@ -149,6 +158,13 @@
         If the seed name is appended to your randomized image filename after
         downloading, you will need to modify your cue file track listing to
         reference the new filename.
+      </p>
+      <h4><a name="cli">Command line interface</a></h4>
+      <p>
+        See the
+        <a href="https://github.com/3snowp7im/SotN-Randomizer#cli">github
+          repository</a> for information on running the randomizer at the
+        command line.
       </p>
       <hr>
       <h2><a name="links">Links</a></h2>
