--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>August 11, 2019</time></h3>
+      <ul>
+        <li>Fix uncurse being placed in random candles.</li>
+      </ul>
       <h3><time>May 23, 2019</time></h3>
       <ul>
         <li>Add support for custom enemy drops, starting equipment, item
