Add support for custom enemy drops from enemies that have no vanilla drops

--- a/index.html
+++ b/index.html
@@ -185,12 +185,14 @@
       <h3><time>August 11, 2019</time></h3>
       <ul>
         <li>Fix uncurse being placed in random candles.</li>
+        <li>Add support for custom enemy drops from enemies that have no vanilla
+          drops.</li>
       </ul>
       <h3><time>May 23, 2019</time></h3>
       <ul>
         <li>Add support for custom enemy drops, starting equipment, item
           locations, and prologue rewards.</li>
-        <li>Deprecate relic logic selector in favor presets.</li>
+        <li>Deprecate relic logic selector in favor of presets.</li>
       </ul>
       <h3><time>May 11, 2019</time></h3>
       <ul>
