Refactor cli and browser code into their own js files, move shared code to utils

--- a/index.html
+++ b/index.html
@@ -325,6 +325,6 @@
     <script src="presets/glitch-hard.js"></script>
     <script src="presets/optimize.js"></script>
     <script src="presets/index.js"></script>
-    <script src="index.js"></script>
+    <script src="browser.js"></script>
   </body>
 </html>
