--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>October 1, 2019</time></h3>
+      <ul>
+        <li>Fix some candles not being randomized.</li>
+      </ul>
       <h3><time>August 15, 2019</time></h3>
       <ul>
         <li>Fix crash related to transfering data to web worker.</li>
