--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
       <h3><time>October 1, 2019</time></h3>
       <ul>
         <li>Fix some candles not being randomized.</li>
+        <li>Add extra agony to agonize preset.</li>
       </ul>
       <h3><time>August 15, 2019</time></h3>
       <ul>
