--- a/index.html
+++ b/index.html
@@ -138,14 +138,6 @@
       <div id="notification">Copied to clipboard</div>
       <hr>
       <h2><a name="help">Help</a></h2>
-      <h4><a name="system-requirements">System requirements</a></h4>
-      <p>
-        Browser: Chrome, Firefox, and Opera<br>
-        OS: Windows, Mac, or Linux family<br>
-        RAM: 2GB<br>
-        <em>Due to the RAM requirements, the randomizer is unlikely to run
-          on mobile browsers.</em>
-      </p>
       <h4><a name="usage">Usage</a></h4>
       <p>
         This randomizer targets the original NTSC-U release of
@@ -182,6 +174,11 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>October 26, 2019</time></h3>
+      <ul>
+        <li>"The Manly Update": Add Jewel + Power + Wolf to locks on Demon Card location.</li>
+        <li>Add extra agony to agonize preset.</li>
+      </ul>
       <h3><time>October 1, 2019</time></h3>
       <ul>
         <li>Fix some candles not being randomized.</li>
