--- a/index.html
+++ b/index.html
@@ -161,11 +161,13 @@
       <hr>
       <h2><a name="links">Links</a></h2>
       <ul>
+        <li><a href="https://github.com/TalicZealot/SotN-Relic-Tracker">Relic Tracker
+            [Lua version]</a> (thanks TalicZealot)</a>
         <li><a href="https://testrunnersrl.github.io/sotn-tracker">Relic
-          tracker</a> (thanks TestRunner)</li>
+            tracker [JS version]</a> (thanks TestRunner)</li>
         <li><a href="relics">Relic distribution table</a> (thanks Soba)</li>
         <li><a href="https://discord.gg/wGMdDRG">The Long Library</a>, a SotN
-          discord server</li>
+          discord server with a dedicated <code>#randomizer</code> channel</li>
       </ul>
       <hr>
       <h2><a name="bugs">Bugs</a></h2>
