--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
-      <h3><time>October 26, 2019</time></h3>
+      <h3><time>February 5, 2020</time></h3>
+      <ul>
+        <li>Update links section.</li>
+      </ul>
       <ul>
         <li>"The Manly Update": Add Jewel + Power + Wolf to locks on Demon Card location.</li>
         <li>Add extra agony to agonize preset.</li>
