--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
       <ul>
         <li>Update links section.</li>
       </ul>
+      <h3><time>October 26, 2019</time></h3>
       <ul>
         <li>"The Manly Update": Add Jewel + Power + Wolf to locks on Demon Card location.</li>
         <li>Add extra agony to agonize preset.</li>
