--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>February 27, 2020</time></h3>
+      <ul>
+        <li>Fix relic duping when performing glitches.</li>
+      </ul>
       <h3><time>February 5, 2020</time></h3>
       <ul>
         <li>Update links section.</li>
