Add Joseph's cloak preset for testing

--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
     <script src="items.js"></script>
     <script src="relics.js"></script>
     <script src="util.js"></script>
+    <script src="presets/josephscloak.js"></script>
     <script src="presets/safe.js"></script>
     <script src="presets/agonize.js"></script>
     <script src="presets/glitch.js"></script>
