--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>March 4, 2020</time></h3>
+      <ul>
+        <li>Add Joseph's Cloak color randomization to Turkey Mode.</li>
+      </ul>
       <h3><time>February 27, 2020</time></h3>
       <ul>
         <li>Fix relic duping when performing glitches.</li>
@@ -186,7 +190,8 @@
       </ul>
       <h3><time>October 26, 2019</time></h3>
       <ul>
-        <li>"The Manly Update": Add Jewel + Power + Wolf to locks on Demon Card location.</li>
+        <li>"The Manly Update": Add Jewel + Power + Wolf to locks on Demon
+          Card location.</li>
         <li>Add extra agony to agonize preset.</li>
       </ul>
       <h3><time>October 1, 2019</time></h3>
@@ -201,8 +206,8 @@
       <h3><time>August 11, 2019</time></h3>
       <ul>
         <li>Fix uncurse being placed in random candles.</li>
-        <li>Add support for custom enemy drops from enemies that have no vanilla
-          drops.</li>
+        <li>Add support for custom enemy drops from enemies that have no
+          vanilla drops.</li>
       </ul>
       <h3><time>May 23, 2019</time></h3>
       <ul>
