--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <span class="tooltip-indicator">?</span>
                         <span class="tooltip hidden">
                           <span id="extension-description">
-                            Relics may appear in rooms guarded by bosses
+                            Relics may appear in rooms guarded by bosses.
                           </span>
                         </span>
                       </span>
