Update links in changelog

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <ul>
         <li>Add support for custom enemy drops, starting equipment, item
           locations, and prologue rewards.</li>
-        <li>Deprecate relic logic selector in favor of presets.</li>
+        <li>Deprecate relic logic selector in favor of <a href="https://github.com/3snowp7im/SotN-Randomizer#presets">presets</a>.</li>
       </ul>
       <h3><time>May 11, 2019</time></h3>
       <ul>
@@ -264,7 +264,7 @@
       </ul>
       <h3><time>May 8, 2019</time></h3>
       <ul>
-        <li>Add support for <a href="https://github.com/3snowp7im/SotN-Randomizer#custom-relic-logic">custom relic logic</a>.</li>
+        <li>Add support for custom relic logic.</li>
       </ul>
       <h3><time>May 3, 2019</time></h3>
       <ul>
