--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
       <h3><time>March 12, 2020</time></h3>
       <ul>
         <li>Add relic locations extension with new Guarded option.</li>
+        <li>Fix softlock in Lesser Demon fight.</li>
       </ul>
       <h3><time>March 4, 2020</time></h3>
       <ul>
