--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>March 13, 2020</time></h3>
+      <ul>
+        <li>Fix relic placement in miscellaneous presets.</li>
+      </ul>
       <h3><time>March 12, 2020</time></h3>
       <ul>
         <li>Add relic locations extension with new Guarded option.</li>
