--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
       <h3><time>March 13, 2020</time></h3>
       <ul>
         <li>Fix relic placement in miscellaneous presets.</li>
+        <li>Fix missing replacement item at Soul of Bat.</li>
       </ul>
       <h3><time>March 12, 2020</time></h3>
       <ul>
