Fix for plandomizers with relic locations extension

--- a/relics/index.html
+++ b/relics/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <script src="../constants.js"></script>
+    <script src="../errors.js"></script>
     <script src="../extension.js"></script>
     <script src="../items.js"></script>
     <script src="../relics.js"></script>
     <script src="../util.js"></script>
+    <script src="../presets/casual.js"></script>
     <script src="../presets/safe.js"></script>
     <script src="../randomize_relics.js"></script>
     <script>
