--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
       <ul>
         <li>Fix relic placement in miscellaneous presets.</li>
         <li>Fix missing replacement item at Soul of Bat.</li>
+        <li>Add extra agony to agonize preset.</li>
       </ul>
       <h3><time>March 12, 2020</time></h3>
       <ul>
