--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
       </p>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>March 17, 2020</time></h3>
+      <ul>
+        <li>Fix disappearing items.</li>
+      </ul>
+      <h2><a name="changelog">Changelog</a></h2>
       <h3><time>March 15, 2020</time></h3>
       <ul>
         <li>Fix duping item that replaces Cube of Zoe.</li>
