--- a/index.html
+++ b/index.html
@@ -403,6 +403,8 @@
     <script src="presets/glitch-hard.js"></script>
     <script src="presets/optimize.js"></script>
     <script src="presets/index.js"></script>
+    <script src="worker.js"></script>
+    <script src="ecc-edc-recalc-js.js"></script>
     <script src="browser.js"></script>
   </body>
 </html>
